--- a/styles/style.css
+++ b/styles/style.css
@@ -354,27 +354,27 @@ body {
 }
 
 .window-minable {
-    background: url(../images/buttons/min-window-button.png?v0.2.2i) 0 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2j) 0 0;
 }
 
 .window-minable:hover {
-    background: url(../images/buttons/min-window-button.png?v0.2.2i) 82px 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2j) 82px 0;
 }
 
 .window-minable:active {
-    background: url(../images/buttons/min-window-button.png?v0.2.2i) 41px 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2j) 41px 0;
 }
 
 .window-maxable {
-    background: url(../images/buttons/min-window-button.png?v0.2.2i) 0 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2j) 0 41px;
 }
 
 .window-maxable:hover {
-    background: url(../images/buttons/min-window-button.png?v0.2.2i) 82px 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2j) 82px 41px;
 }
 
 .window-maxable:active {
-    background: url(../images/buttons/min-window-button.png?v0.2.2i) 41px 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2j) 41px 41px;
 }
 /* #endregion */
 
@@ -400,7 +400,7 @@ body {
 .label-gold {
     color: rgba(0, 0, 0, 0.55);
     text-shadow: -1px -1px rgba(0, 0, 0, 0.35);
-    background: url(../images/panel/gold-texture.png?v0.2.2i), #d4af37;
+    background: url(../images/panel/gold-texture.png?v0.2.2j), #d4af37;
     font-style: italic;
     box-shadow: -2px -3px 2px 2px rgba(0, 0, 0, 0.5) inset,
                 2px 3px 2px 2px rgba(255, 255, 255, 0.8) inset,
@@ -408,7 +408,7 @@ body {
 }
 
 .block-gold {
-    background-image: url(../images/panel/gold-texture.png?v0.2.2i), linear-gradient(90deg, #d4af37, #aa8714);
+    background-image: url(../images/panel/gold-texture.png?v0.2.2j), linear-gradient(90deg, #d4af37, #aa8714);
     box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.35) inset,
                 6px 6px 6px 4px rgba(255, 255, 255, 0.8) inset;
 }
@@ -950,15 +950,15 @@ body {
 
     width: 40px;
     height: 40px;
-    background: url(../images/buttons/question-button.png?v0.2.2i) 0px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2j) 0px 0px;
 }
 
 .buttom-sim-help-image:hover {
-    background: url(../images/buttons/question-button.png?v0.2.2i) 80px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2j) 80px 0px;
 }
 
 .buttom-sim-help-image:active {
-    background: url(../images/buttons/question-button.png?v0.2.2i) 40px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2j) 40px 0px;
 }
 /* #endregion */
 
@@ -1167,17 +1167,17 @@ body {
 
 .expand-sidebar-image {
     transform: translate(-8px, -3px);
-    background: url(../images/buttons/expand-arrow.png?v0.2.2i) 0px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2j) 0px 0px;
     width: 30px;
     height: 30px;
 }
 
 .expand-sidebar-image:hover {
-    background: url(../images/buttons/expand-arrow.png?v0.2.2i) 60px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2j) 60px 0px;
 }
 
 .expand-sidebar-image:active {
-    background: url(../images/buttons/expand-arrow.png?v0.2.2i) 30px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2j) 30px 0px;
 }
 
 @keyframes rotate180 {
@@ -1266,7 +1266,7 @@ body {
 
 .search-button {
     border-radius: 50%;
-    background: url(../images/buttons/search-button.png?v0.2.2i) no-repeat;
+    background: url(../images/buttons/search-button.png?v0.2.2j) no-repeat;
     height: 41px;
     width: 41px;
     border: none;
@@ -1276,11 +1276,11 @@ body {
 }
 
 .search-button:hover {
-    background: url(../images/buttons/search-button-hover.png?v0.2.2i) no-repeat;
+    background: url(../images/buttons/search-button-hover.png?v0.2.2j) no-repeat;
 }
 
 .search-button:active {
-    background: url(../images/buttons/search-button-click.png?v0.2.2i) no-repeat;
+    background: url(../images/buttons/search-button-click.png?v0.2.2j) no-repeat;
 }
 /* #endregion */
 
@@ -1295,7 +1295,7 @@ body {
     position: relative;
     top: 20px;
     border-radius: 50%;
-    background: url(../images/buttons/name-sort.png?v0.2.2i) no-repeat;
+    background: url(../images/buttons/name-sort.png?v0.2.2j) no-repeat;
     height: 41px;
     width: 41px;
     border: none;
@@ -1305,11 +1305,11 @@ body {
 }
 
 .sort-button:hover {
-    background: url(../images/buttons/name-sort-hover.png?v0.2.2i) no-repeat;
+    background: url(../images/buttons/name-sort-hover.png?v0.2.2j) no-repeat;
 }
 
 .sort-button:active {
-    background: url(../images/buttons/name-sort-selected.png?v0.2.2i) no-repeat;
+    background: url(../images/buttons/name-sort-selected.png?v0.2.2j) no-repeat;
 }
 /* #endregion */
 
@@ -1332,7 +1332,7 @@ body {
 }
 
 .export-arrow {
-    background: url(../images/buttons/export-arrow.png?v0.2.2i) 0px 0px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2j) 0px 0px;
     width: 41px;
     height: 42px;
     margin-top: 9px;
@@ -1345,15 +1345,15 @@ body {
 }
 
 .export-arrow:hover {
-    background: url(../images/buttons/export-arrow.png?v0.2.2i) 0px 84px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2j) 0px 84px;
 }
 
 .export-arrow:active {
-    background: url(../images/buttons/export-arrow.png?v0.2.2i) 0px 42px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2j) 0px 42px;
 }
 
 .import-arrow {
-    background: url(../images/buttons/export-arrow.png?v0.2.2i) 41px 0px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2j) 41px 0px;
     width: 41px;
     height: 42px;
     margin-top: 9px;
@@ -1366,11 +1366,11 @@ body {
 }
 
 .import-arrow:hover {
-    background: url(../images/buttons/export-arrow.png?v0.2.2i) 41px 84px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2j) 41px 84px;
 }
 
 .import-arrow:active {
-    background: url(../images/buttons/export-arrow.png?v0.2.2i) 41px 42px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2j) 41px 42px;
 }
 /* #endregion */
 
