--- a/styles/style.css
+++ b/styles/style.css
@@ -426,6 +426,17 @@ body {
     background-color: #ac8f31 !important;
 }
 
+/* THEMED BLOCKS */
+.block-candy-cane {
+    background-color: #e5e5f7;
+    background: repeating-linear-gradient(-45deg, #f74444, #f74444 50px, #f8f8ef 10px, #f8f8ef 100px);
+}
+
+.bookmark-candy-cane {
+    color: #255920;
+    text-shadow: 0px 0px 4px #ecc031;
+}
+
 /* BLOCK STYLE */
 .block-pink {
     background-image: linear-gradient(90deg, pink, rgb(255, 132, 153));
