--- a/styles/style.css
+++ b/styles/style.css
@@ -45,13 +45,17 @@ body {
 
 .container {
     display: flex;
-    align-items: flex-start;
-    gap: 10px;
-    position: absolute;
+    flex-direction: column;
 }
 
 .container *{
     /* outline: 2px solid red; */
+}
+
+.site-columns {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
 }
 
 .column-1 {
@@ -96,6 +100,26 @@ body {
 
     box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.4) inset,
                 4px 4px 5px 3px rgba(255, 255, 255, 0.65) inset;
+}
+
+.shutdown-notice {
+    width: 965px;
+    height: 150px;
+
+    margin: 10px;
+    margin-top: 2px;
+
+    display: flex;
+    align-items: center;
+
+    padding: 0px 25px;
+}
+
+.shutdown-notice-text {
+    align-self: center;
+    flex-grow: 1;
+    font-size: 1.15em !important;
+    text-wrap: wrap !important;
 }
 
 .inset-title {
